# CagroManipulationROS

./: .gitignore  README.md  exp2_log_KDL.csv  exp2_log_LMA.csv  exp2_log_TRCKIK.csv  run_gazebo.sh  run_real.sh
src/interbotix_demos/: CMakeLists.txt  package.xml  readme.txt
src/interbotix_demos/src/: exp3_grasp.py  exp4.py  ik_service_KDL_baozhe.py  ik_service_LMA_baozhe.py  ik_service_TRCKIK_baozhe.py  ik_service_baozhe.py  ik_service_demo.py  move_test.py  moveit_cartesian_demo.py  moveit_fk_demo.py  moveit_gripper_demo.py  moveit_ik_demo.py
src/interbotix_ros_arms/interbotix_descriptions/urdf/: wx250s.urdf.xacro  wx250s_setup.xacro
src/interbotix_ros_arms/interbotix_gazebo/config/: interbotix_texture.gazebo  wx250s_gazebo_controllers.yaml
src/interbotix_ros_arms/interbotix_gazebo/launch/: gazebo.launch
src/interbotix_ros_arms/interbotix_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/object_color_detector/: CMakeLists.txt
src/object_color_detector/config/: vision_config.yaml  vision_config_gazebo copy.yaml  vision_config_old.yaml
src/object_color_detector/launch/: object_detect_hsv.launch  usb_cam.launch
src/object_color_detector/scripts/: auto_calibration_hsv.py  main_project2.py
src/object_color_detector/src/: main_object_detector.cpp
src/object_color_detector/srv/: DetectObjectSrv.srv  PickPlaceSrv.srv
src/object_color_detector/tool/: para_test  readme
src/object_color_detector/tool/para_test_tool/: CMakeLists.txt
src/object_color_detector/tool/para_test_tool/src/: main.cpp
(+43 files in other folders)
